--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,6 +84,21 @@ form.button_to {
   }
 }
 
+// Allow visually hiding a legend, when it duplicates a heading
+.fr-legend--hidden .fr-fieldset__legend {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* added line */
+  border: 0;
+  display: block;
+  height: 0;
+}
+
 // Allow placing input and buttons side-by-side
 .fr-input-group--inline {
   display: flex;
