feat: Require site in sites/_form partial using strict_locals

--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -1,6 +1,6 @@
 <% use_centered_layout %>
 
-<%= render "form", site: @site || Site.new %>
+<%= render "form", site: @site || current_user.team.sites.build %>
 
 <%= or_separator %>
 
