feat: Remove site name autofocus from site form

--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (site:) %>
 <%= form_with(model: site) do |f| %>
   <%= f.dsfr_input_field :url, :text_field, type: :url, required: true, autofocus: true, hint: Site.human(:url_hint) %>
-  <%= f.dsfr_text_field :name, autofocus: site.persisted?, hint: Site.human(:name_hint) %>
+  <%= f.dsfr_text_field :name, hint: Site.human(:name_hint) %>
 
   <%= f.submit t("shared.#{site.persisted? ? :save : :add}"), name: nil, class: "fr-btn", data: { turbo_submits_with: t("shared.saving") } %>
 <% end %>
