feat: Add tags to sites

--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -4,6 +4,14 @@
       <strong><%= Site.human :url %> :</strong>
       <%= link_to @site.url, @site.url, target: :_blank %>
     </p>
+    <p>
+      <strong><%= Tag.human(:all) %> :</strong>
+      <% if @site.tags.load.any? %>
+        <%= @site.tags.collect(&:name).map { dsfr_tag(title: it.truncate(35), size: :sm) }.join.html_safe %>
+      <% else %>
+        <%= Tag.human_count(count: 0) %>
+      <% end %>
+    </p>
     <% if @audit.checked_at %>
       <p>
         <strong><%= Audit.human :checked_at %> :</strong>
