fix: Fix brakeman warning when displaying a list of tags

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -24,7 +24,7 @@
           <td class="fr-cell--multiline">
             <% tags = site.tags.collect(&:name) %>
             <% if tags.any? %>
-              <%= site.tags.take(3).collect(&:name).map { dsfr_tag(title: it.truncate(35), size: :sm) }.join.html_safe %>
+              <%= safe_join site.tags.take(3).collect(&:name).map { dsfr_tag(title: it.truncate(35), size: :sm) } %>
               <%= dsfr_tooltip(t("shared.x_more", x: tags.size - 3), type: :link, title: site.tags[3..].collect(&:name).to_sentence) if tags.size > 3 %>
             <% else %>
               N/A
