--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -8,5 +8,7 @@
 <%= form_with(model: @upload || SiteUpload.new, url: upload_sites_url) do |f| %>
   <%= f.dsfr_file_field :file, label: Site.human(:file), required: true, hint: Site.human(:file_hint), class: "fr-mb-4w", accept: ".csv", data: { controller: "dragover", action: "dragover->dragover#enter dragleave->dragover#leave drop->dragover#drop" } %>
 
+  <%= render "tags_form", object: f.object %>
+
   <%= f.submit t("shared.import"), name: nil, class: "fr-btn", data: { disable_with: t("shared.importing") } %>
 <% end %>
