feat: Allow selectings tags when importing sites (#103)
- [x] Update `SiteUpload` model to accept `tag_ids` and
`tags_attributes` (to match `Site` model implementation)
- [x] Add `tags_form` partial to site upload form
- [x] Override `tags_attributes` to find or create tags on the selected
team
- [x] Override `assign_attributes` to ensure team is set first, because
`tags_attributes=` depends on team being set
- [x] Merge new tags with existing site tags to avoid information loss

--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -3,6 +3,7 @@
   <%= f.dsfr_input_field :url, :text_field, type: :url, required: true, autofocus: true, hint: Site.human(:url_hint) %>
   <%= f.dsfr_text_field :name, hint: Site.human(:name_hint) %>
 
-  <%= render "tags_form", site: %>
+  <%= render "tags_form", object: f.object %>
+
   <%= f.submit t("shared.#{site.persisted? ? :save : :add}"), name: nil, class: "fr-btn", data: { turbo_submits_with: t("shared.saving") } %>
 <% end %>
