--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -39,7 +39,7 @@
 
 <br>
 
-<div class="fr-btn-group fr-mb-2w">
+<div class="fr-btns-group fr-btns-group--inline-md fr-mb-2w">
   <%= button_to Audit.human(:new), [@site, :audits], method: :post, class: "fr-btn" %>
   <%= link_to Site.human(:edit), [:edit, @site], class: "fr-btn fr-btn--secondary" %>
   <%= button_to Site.human(:delete), @site, method: :delete, class: "fr-btn fr-btn--tertiary", form: { data: { turbo_confirm: t("shared.confirm") } } %>
