ui: Allow spacing buttons in a button group to improve UI

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,6 +58,11 @@ form.button_to {
   }
 }
 
+// Increase button spacing for clarity (particularly useful to place primary/secondary apart)
+.fr-btns-group--space-between {
+  justify-content: space-between;
+}
+
 // Improve file upload group affordance
 .fr-upload-group {
   .fr-upload {
