feat: Replace check count with team count on homepage

--- a/app/views/pages/accueil.html.erb
+++ b/app/views/pages/accueil.html.erb
@@ -1,8 +1,8 @@
 <% use_centered_layout(boxed: false) %>
 
-<p>L’<a href="https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000048049674">ordonnance de transposition du 6 septembre 2023</a> a défini de nouvelles missions de l’Arcom&nbsp;en créant l’<a href="https://www.legifrance.gouv.fr/loda/article_lc/LEGIARTI000048050174">article 47-1 de la loi n°2005-102</a> qui précise&nbsp;: «&nbsp;Afin de faciliter le contrôle de ces obligations, elle peut mettre en œuvre des méthodes proportionnées de <strong>collecte automatisée</strong> de données publiquement accessibles.&nbsp;»</p>
+<p>L’<a href="https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000048049674">ordonnance de transposition du 6 septembre 2023</a> a défini de nouvelles missions de l’Arcom en créant l’<a href="https://www.legifrance.gouv.fr/loda/article_lc/LEGIARTI000048050174">article 47-1 de la loi n°2005-102</a> qui précise&nbsp;: «&nbsp;Afin de faciliter le contrôle de ces obligations, elle peut mettre en œuvre des méthodes proportionnées de <strong>collecte automatisée</strong> de données publiquement accessibles.&nbsp;»</p>
 
-<p>Cette plateforme vise à doter cette autorité de contrôle d’un service automatisé de contrôle, et à accompagner les administrations responsables de services numériques dans leur mise en conformité avec le RGAA en mettant ce même service à leur disposition.</p>
+<p>Cette plateforme vise à doter cette autorité de contrôle d’un service automatisé de contrôle, et à accompagner les administrations responsables de services numériques dans leur mise en conformité avec le <abbr>RGAA</abbr> en mettant ce même service à leur disposition.</p>
 
 <h2>Les usagers</h2>
 <p>D’une part, l’autorité de contrôle chargée de faire respecter l’accessibilité des sites publics n’est aujourd’hui pas outillée.</p>
@@ -27,9 +27,9 @@
   </div>
   <div class="fr-col-12 fr-col-sm-6">
     <div class="fr-card fr-p-2w">
-      <h3 class="fr-mb-5w text-center blue-title">Points de contrôles</h3>
+      <h3 class="fr-mb-5w text-center blue-title">Équipes utilisatrices</h3>
       <p class="fr-mb-2w">
-        <%= Check.past.human_count %>
+        <%= Team.human_count %>
       </p>
     </div>
   </div>
