feat: Set aria-current: page on sitemap link in sitemap page

--- a/app/views/pages/plan.html.erb
+++ b/app/views/pages/plan.html.erb
@@ -3,7 +3,7 @@
     <%= link_to "Page d'accueil", root_path %>
   </li>
   <li>
-    <%= link_to "Plan du site", plan_path %>
+    <%= link_to "Plan du site", plan_path, aria: { current: :page } %>
   </li>
   <li>
     <%= link_to "Accessibilité : non conforme", accessibilite_path %>
