feat: Update contact page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,11 @@
 <p>Vous pouvez nous joindre par les moyens suivants :</p>
 
 <ul>
-  <li>E-mail : <a href="mailto:acces-cible@beta.gouv.fr">acces-cible@beta.gouv.fr</a></li>
-  <li>Courrier : DINUM, Ségur, Paris</li>
+  <li>E-mail&nbsp;: <a href="mailto:acces-cible@beta.gouv.fr">acces-cible@beta.gouv.fr</a></li>
+  <li>Courrier&nbsp;:
+    Direction interministérielle du numérique (<abbr>DINUM</abbr>),
+    <br>20 avenue de Ségur,
+    <br>75007 Paris,
+    <br>France
+  </li>
 </ul>
