--- a/app/views/pages/accessibilite.html.erb
+++ b/app/views/pages/accessibilite.html.erb
@@ -1,4 +1,4 @@
-<p>Établie le 21 janvier 2025.</p>
+<p><em>Établie le 21 janvier 2025.</em></p>
 
 <p>La Direction Interministérielle du Numérique s’engage à rendre son service accessible, conformément à l’article 47 de la loi n° 2005-102 du 11 février 2005.</p>
 
@@ -6,32 +6,35 @@
 
 <h2>État de conformité</h2>
 
-<p>Accès'Cible est non conforme avec le <abbr title="Référentiel Général d'Amélioration de l'Accessibilité">RGAA</abbr>. Le site n’a encore pas été audité.</p>
+<p>Accès'Cible est non conforme avec le <abbr title="Référentiel Général d'Amélioration de l'Accessibilité">RGAA</abbr>. Étant actuellement en construction, le site n’a encore pas été audité. L'équipe s'attache cependant à prendre l'accessibilité en compte à toutes les étapes de sa conception, afin que le service soit utilisable par toutes et tous, sans discrimination.</p>
 
 <h2>Amélioration et contact</h2>
 
 <p>Si vous n’arrivez pas à accéder à un contenu ou à un service, vous pouvez contacter le responsable de Accès'Cible pour être orienté vers une alternative accessible ou obtenir le contenu sous une autre forme.</p>
 
 <ul>
-  <li>E-mail : <a href="mailto:acces-cible@beta.gouv.fr">acces-cible@beta.gouv.fr</a></li>
-  <li>Formulaire de contact : <a href="https://acces-cible.beta.gouv.fr/contact">Nous contacter</a></li>
-  <li>Adresse : DINUM, Ségur, Paris</li>
+  <li>E-mail&nbsp;: <a href="mailto:acces-cible@beta.gouv.fr">acces-cible@beta.gouv.fr</a></li>
+  <li>Courrier&nbsp;: Direction interministérielle du numérique (<abbr>DINUM</abbr>),
+    <br>20 avenue de Ségur,
+    <br>75007 Paris,
+    <br>France</li>
 </ul>
 
 <p>Nous essayons de répondre dans les 2 jours ouvrés.</p>
 
 <h2>Voie de recours</h2>
 
-<p>Cette procédure est à utiliser dans le cas suivant : vous avez signalé au responsable du site internet un défaut d’accessibilité qui vous empêche d’accéder à un contenu ou à un des services du portail et vous n’avez pas obtenu de réponse satisfaisante.</p>
+<p>Cette procédure est à utiliser si vous n’avez pas obtenu de réponse satisfaisante après avoir signalé au responsable du site internet un défaut d’accessibilité qui vous empêche d’accéder à un contenu ou à un des services du portail.</p>
 
-<p>Vous pouvez :</p>
+<p>Vous pouvez&nbsp;:</p>
 <ul>
   <li>Écrire un message au Défenseur des droits</li>
   <li>Contacter le délégué du Défenseur des droits dans votre région</li>
-  <li>Envoyer un courrier par la poste (gratuit, ne pas mettre de timbre) :
+  <li>Envoyer un courrier par la poste (gratuit, ne pas mettre de timbre)&nbsp;:
       <br>Défenseur des droits
-      <br>Libre réponse 71120 75342 Paris CEDEX 07
+      <br>Libre réponse 71120
+      <br>75342 Paris CEDEX 07
   </li>
 </ul>
 
-<p>Cette déclaration d’accessibilité a été créé le 21 janvier 2025 grâce au <a href="https://betagouv.github.io/a11y-generateur-declaration/">Générateur de Déclaration d’Accessibilité</a> de BetaGouv.</p>
+<p>Cette déclaration d’accessibilité a été créée le 21 janvier 2025 grâce au <a href="https://betagouv.github.io/a11y-generateur-declaration/">Générateur de Déclaration d’Accessibilité</a> de BetaGouv.</p>
