--- a/app/views/pages/mentions_legales.html.erb
+++ b/app/views/pages/mentions_legales.html.erb
@@ -1,14 +1,15 @@
 <h2>Éditeur</h2>
-<p>Ce site est édité par la direction interministérielle du numérique (DINUM), un service de la Première Ministre sous l’autorité du ministre de la Transformation et de la Fonction publiques.</p>
+<p>Ce site est édité par la direction interministérielle du numérique (<abbr>DINUM</abbr>), un service du Premier Ministre sous l’autorité du ministre de la Transformation et de la Fonction publiques.</p>
 
 <p>
-  DINUM
+  <abbr>DINUM</abbr>
   <br>20 avenue de Ségur
   <br>75007 Paris
+  <br>France
 </p>
 <p>
-  SIRET&nbsp;: 12000101100010 (secrétariat général du gouvernement)
-  <br>SIREN&nbsp;: 120 001 011
+  <abbr>SIRET</abbr>&nbsp;: 120 001 011 000 10 (secrétariat général du gouvernement)
+  <br><abbr>SIREN</abbr>&nbsp;: 120 001 011
 </p>
 
 <h2>Directrice de publication</h2>
@@ -18,7 +19,7 @@
 <h2>Conception et gestion du site</h2>
 
 <p>Ce site est développé selon un principe d’amélioration continue.</p>
-<p>Le suivi éditorial et graphique est assuré au quotidien par le pôle Communication de la DINUM, avec l’aide de la société LittleBigConnection pour le volet technique.</p>
+<p>Le suivi éditorial et graphique est assuré au quotidien par le pôle Communication de la <abbr>DINUM</abbr>.</p>
 
 <h2>Code source du site</h2>
 
@@ -33,8 +34,8 @@
 <h2>Hébergement</h2>
 
 <p>
-  Scalingo SAS,
+  Scalingo <abbr>SAS</abbr>,
   <br>13 rue Jacques Peirotes
   <br>67000 Strasbourg France
-  <br>SIRET 80866548300018
+  <br><abbr>SIRET</abbr> 80866548300018
 </p>
