feat: Update cookies page

--- a/app/views/pages/cookies.html.erb
+++ b/app/views/pages/cookies.html.erb
@@ -1,1 +1,14 @@
-<p>Le site ne stocke aucune donnée personnelles dans des cookies.</p>
+<h2><span lang="en">Cookies</span> déposés</h2>
+<p>Ce site dépose un petit fichier texte (un « <span lang="en">cookie</span> ») sur votre ordinateur lorsque vous le consultez.
+<ul>
+  <li>Si vous n'êtes pas connecté•e, ce <span lang="en">cookie</span> sert à sécuriser la connection en vérifiant que les tentatives de connection proviennent bien de visiteurs du site.</li>
+  <li>Si vous êtes connecté•e, il contient l'identifiant de session permettant d'afficher vos informations personnelles, de manière cryptée.</li>
+</ul>
+<p>Dans tous les cas, ce <span lang="en">cookie</span> en lui-même ne contient aucune donnée personnelle.</p>
+
+<h2>Bandeau de consentement aux cookies</h2>
+
+<p>
+  Le site n'affiche pas de bandeau demandant le consentement pour l'enregistrement de cookies.
+  <br>En effet, l'utilisation des <span lang="en">cookies</span> faite par le site est respectueuse de la vie privée, et donc exemptée d'autorisation préalable.
+</p>
