--- a/app/views/pages/accueil.html.erb
+++ b/app/views/pages/accueil.html.erb
@@ -1,23 +1,57 @@
 <% use_centered_layout(boxed: false) %>
 
-<p>L’<a href="https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000048049674">ordonnance de transposition du 6 septembre 2023</a> a défini de nouvelles missions de l’Arcom en créant l’<a href="https://www.legifrance.gouv.fr/loda/article_lc/LEGIARTI000048050174">article 47-1 de la loi n°2005-102</a> qui précise&nbsp;: «&nbsp;Afin de faciliter le contrôle de ces obligations, elle peut mettre en œuvre des méthodes proportionnées de <strong>collecte automatisée</strong> de données publiquement accessibles.&nbsp;»</p>
+<p><strong>Accès cible permet de contrôler la conformité légale des sites Internet par rapport à l'accessibilité.</strong></p>
 
-<p>Cette plateforme vise à doter cette autorité de contrôle d’un service automatisé de contrôle, et à accompagner les administrations responsables de services numériques dans leur mise en conformité avec le <abbr>RGAA</abbr> en mettant ce même service à leur disposition.</p>
+<h2>Contrôles effectués</h2>
 
-<h2>Les usagers</h2>
-<p>D’une part, l’autorité de contrôle chargée de faire respecter l’accessibilité des sites publics n’est aujourd’hui pas outillée.</p>
-<p>De l’autre, certaines organisations devant respecter <abbr>RGAA</abbr> n’ont pas les moyens de s’autocontrôler afin d’améliorer l’accessibilité de leurs services numériques.</p>
-<p>Sont notamment concernées en tout ou partie par le <abbr>RGAA</abbr> :</p>
-<ul class="fr-pl-4w fr-mb-4w">
-  <li>les administrations des trois fonctions publiques dont les collectivités territoriales et l’État, ses services déconcentrés et ses opérateurs&nbsp;;</li>
-  <li>les organisations délégataires d’une mission de service public ou sous contrôle d’une administration&nbsp;;</li>
-  <li>les entreprises dont le chiffre d’affaires en France est supérieur à 250&nbsp;millions d’euros.</li>
+<p>L'outil effectue différents contrôles sur les sites qui lui sont indiqués&nbsp;:</p>
+<ul>
+  <li>présence d'une mention «&nbsp;Accessibilité : totalement conforme/partiellement conforme/non conforme&nbsp;»&nbsp;;</li>
+  <li>une page d'accessibilité conforme avec le modèle officiel&nbsp;;</li>
+  <li>un schéma pluriannuel d'amélioration de l'accessibilité, un plan d'actions et un bilan annuel&nbsp;;</li>
+  <li>ainsi que d'autres contrôles complémentaires.</li>
 </ul>
+
+<h2>Ajout de sites</h2>
+
+<p>Les sites peuvent être ajoutés soit un par un, en indiquant l'adresse, ainsi éventuellement qu'un nom et des étiquettes, ou en envoyant une liste de sites au format <abbr>CSV</abbr>.</p>
+
+<h2>Présentation des résultats</h2>
+
+<p>Les résultats d'analyse d'un site sont présentés de manière à faciliter la correction des problèmes rencontrés.</p>
+<p>Un tableau donne une vision synthétique des différents sites ajoutés, pour faciliter la comparaison.</p>
+
+<h2>À qui s'adresse ce service&nbsp;?</h2>
+
+<dl class="fr-mb-4w">
+  <dt><strong>Arcom</strong></dt>
+  <dd>
+    L’<a href="https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000048049674">ordonnance de transposition du 6 septembre 2023</a> a défini de nouvelles missions de l’Arcom en créant l’<a href="https://www.legifrance.gouv.fr/loda/article_lc/LEGIARTI000048050174">article 47-1 de la loi n°2005-102</a> qui précise&nbsp;: <q>Afin de faciliter le contrôle de ces obligations, elle peut mettre en œuvre des méthodes proportionnées de <strong>collecte automatisée</strong> de données publiquement accessibles.</q>
+    <br>Cette plateforme vise à doter l'Arcom d’un service automatisé de contrôle afin de remplir cette mission.
+  </dd>
+  <dt><strong>Administrations</strong></dt>
+  <dd>
+    Les collectivités territoriales, l’État, ses services déconcentrés et ses opérateurs doivent respecter le <abbr>RGAA</abbr>, mais n'ont pas toujours les moyens de s'autocontrôler afin d’améliorer l’accessibilité de leurs services numériques.
+  </dd>
+  <dt><strong>Délégataires de service public</strong></dt>
+  <dd>
+    Les organisations délégataires d’une mission de service public ou sous contrôle d’une administration doivent produire des sites et applications accessibles, au même titre que l'administration qui les missionne.
+  </dd>
+  <dt><strong>Entreprises</strong></dt>
+  <dd>
+    Les entreprises dont le chiffre d’affaires en France est supérieur à 250&nbsp;millions d’euros doivent également respecter le <abbr>RGAA</abbr>.
+  </dd>
+</dl>
+
+<p>
+  La connexion utilisateur s'effectue grâce à <a href="https://www.proconnect.gouv.fr/" target="_blank" rel="noopener">ProConnect</a>, qui peut être utilisé par tous les professionnels du public comme du privé.
+  <br>Vérifiez votre éligibilité en cliquant sur le bouton <strong>S'identifier avec ProConnect</strong>. Les personnes de votre équipe (selon les informations fournies par ProConnect) ont accès aux sites et aux résultats des contrôles effectués.
+</p>
 
 <h2>Statistiques</h2>
 
 <div class="fr-grid-row fr-grid-row--gutters fr-mb-2v">
-  <div class="fr-col-12 fr-col-sm-6">
+  <div class="fr-col-12 fr-col-sm">
     <div class="fr-card fr-p-2w">
       <h3 class="fr-mb-5w text-center blue-title">Sites contrôlés</h3>
       <p class="fr-mb-2w">
@@ -25,7 +59,7 @@
       </p>
     </div>
   </div>
-  <div class="fr-col-12 fr-col-sm-6">
+  <div class="fr-col-12 fr-col-sm">
     <div class="fr-card fr-p-2w">
       <h3 class="fr-mb-5w text-center blue-title">Équipes utilisatrices</h3>
       <p class="fr-mb-2w">
