--- a/app/views/pages/donnees_personnelles.html.erb
+++ b/app/views/pages/donnees_personnelles.html.erb
@@ -1,1 +1,86 @@
-<p>Le site ne stocke aucune donnée personnelle.</p>
+ <p>Accès Cible est un outil de contrôle de l'accessibilité numérique développé au sein la direction interministérielle du numérique (<abbr>DINUM</abbr>).</p>
+
+ <p>Le responsable du traitement des données est la <abbr>DINUM</abbr>, représentée par Stéphanie Schaer, directrice interministérielle du numérique.</p>
+
+<h2>Pourquoi et comment vos données personnelles sont traitées ?</h2>
+
+<%= dsfr_table(caption: "Données personnelles utilisées par la plateforme") do |t| %>
+  <%= t.with_head do %>
+    <tr>
+      <th>Données</th>
+      <th>Finalité poursuivie</th>
+      <th>Fondement juridique</th>
+      <th>Durée de conservation</th>
+    </tr>
+  <% end %>
+  <% t.with_body do %>
+    <tr>
+      <td class="fr-cell--multiline">
+        Nom,
+        prénom,
+        adresse électronique,
+        entité de rattachement
+      </td>
+      <td>Gestion du compte utilisateur</td>
+      <td class="fr-cell--multiline">Mission d’intérêt public (article 6 – 11° du décret numéro 2019-1088 du 25 octobre 2019)&nbsp;: <q>[la <abbr>DINUM</abbr>] construit, met à disposition et opère des infrastructures et services numériques d'usage partagé, et notamment le réseau interministériel de l'Etat, dont la stratégie de résilience et de sécurité est définie conjointement avec le secrétariat général de la défense et de la sécurité nationale, ainsi que des <strong>outils numériques à destination des agents publics</strong></q>.
+     </td>
+      <td class="fr-cell--multiline">Un an après la dernière connexion, ou immédiatement à la demande de l'utilisateur•ice.</td>
+    </tr>
+  <% end %>
+<% end %>
+
+<h2>Qui nous aide à traiter vos données personnelles ?</h2>
+
+<p>Afin d’héberger vos données personnelles, nous faisons appel à un sous-traitant. Avant de lui transmettre vos données, nous nous sommes assurés de la mise en œuvre par ses sous-traitants de garanties adéquates et du respect de conditions strictes de confidentialité, d’usage et de protection des données.</p>
+
+
+<%= dsfr_table(caption: "Données personnelles utilisées par la plateforme") do |t| %>
+  <%= t.with_head do %>
+    <tr>
+      <th>Partenaire</th>
+      <th>Pays destinataire</th>
+      <th>Traitement réalisé</th>
+      <th>Garanties</th>
+    </tr>
+  <% end %>
+  <% t.with_body do %>
+    <tr>
+      <td>Scalingo</td>
+      <td>France</td>
+      <td>Stockage des données en base de données</td>
+      <td>Clauses de sous-traitance</td>
+    </tr>
+  <% end %>
+<% end %>
+
+<h2>Quels sont vos droits&nbsp;?</h2>
+
+<p>Vous disposez&nbsp;:</p>
+
+<ul>
+  <li>d’un droit d’information et d’un droit d’accès à vos données&nbsp;;</li>
+  <li>d’un droit à la limitation du traitement de vos données&nbsp;;</li>
+  <li>d’un droit de rectification&nbsp;;</li>
+  <li>d’un droit d’opposition.</li>
+</ul>
+
+<p>Pour les exercer, contactez-nous par message électronique&nbsp;: <a href="mailto:dpd@pm.gouv.fr">dpd@pm.gouv.fr</a></p>
+
+<p>Ou par voie postale à l’adresse suivante&nbsp;:</p>
+
+<p>
+  Services du Premier ministre
+  <br>À l’attention du délégué à la protection des données (<abbr>DPD</abbr>)
+  <br>56 rue de Varenne
+  <br>75007 Paris
+</p>
+
+<p>Puisque ce sont des droits personnels, nous ne traiterons votre demande que si nous sommes en mesure de vous identifier. Dans le cas où nous ne parvenons pas à vous identifier, nous pouvons être amenés à vous demander une preuve de votre identité.</p>
+
+<p>Pour vous aider dans votre démarche, vous trouverez un modèle de demande élaboré par la <abbr>CNIL</abbr> ici&nbsp;: <a href="https://www.cnil.fr/fr/modele/courrier/exercer-son-droit-dacces" rel="noopener" target="_blank">www.cnil.fr/fr/modele/courrier/exercer-son-droit-dacces</a>.</p>
+
+<p>Nous nous engageons à vous répondre dans un délai raisonnable qui ne saurait dépasser 1 mois à compter de la réception de votre demande.</p>
+
+<h2>Suivi d’audience et vie privée</h2>
+
+<p>Le site ne contient pas de dispositif de mesure d'audience.</p>
