ui: Display plain numbers for tag sites count to simplify comparison

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -10,7 +10,7 @@
       <% @tags.each do |tag| %>
         <tr>
           <td><%= link_to tag.name, tag %></td>
-          <td class="fr-cell--right"><%= Site.human_count(count: tag.sites_count) %></td>
+          <td class="fr-cell--right"><%= tag.sites_count %></td>
         </tr>
       <% end %>
     <% end %>
