refactor: Prevent useless SQL count when there are no tags to list

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -16,5 +16,5 @@
     <% end %>
   <% end %>
 <% else %>
-  <%= dsfr_alert(type: :info, title: Tag.human_count) %>
+  <%= dsfr_alert(type: :info, title: Tag.human_count(count: 0)) %>
 <% end %>
