fix: Remove tag name input id which is no longer necessary

--- a/app/views/sites/_tags_form.html.erb
+++ b/app/views/sites/_tags_form.html.erb
@@ -5,7 +5,7 @@
       <%= f.dsfr_collection_check_boxes(:tag_ids, team.tags, :id, :name, { legend: Tag.human(:all) }, class: "fr-legend--hidden") %>
       <div class="fr-input-group--inline fr-mb-0">
         <%= f.fields_for :tags_attributes, Tag.new do |ff| %>
-          <%= ff.dsfr_text_field :name, label: Tag.human(:new), id: dom_id(object, :tag_name) %>
+          <%= ff.dsfr_text_field :name, label: Tag.human(:new) %>
         <% end %>
         <%= f.button t("shared.add"), class: icon_class("add-circle", btn: :secondary, line: true), hidden: true,
                     data: { action: "frame#submit:prevent", "frame-target": :button }, title: Tag.human(:add) %>
