feat: Add a page_actions helper

--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -39,9 +39,9 @@
 
 <br>
 
-<div class="fr-btns-group fr-btns-group--inline-md fr-mb-2w">
+<%= page_actions do %>
   <%= button_to Audit.human(:new), [@site, :audits], method: :post, class: "fr-btn" %>
   <%= link_to Site.human(:edit), [:edit, @site], class: "fr-btn fr-btn--secondary" %>
   <%= button_to Site.human(:delete), @site, method: :delete, class: "fr-btn fr-btn--tertiary", form: { data: { turbo_confirm: t("shared.confirm") } } %>
   <%= link_to t("shared.back_to_list"), { controller: :sites, action: :index }, class: "fr-btn fr-btn--tertiary-no-outline" %>
-</div>
+<% end %>
