--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,26 @@
-<% content_for :title, "Profil de #{@user.given_name} #{@user.usual_name}" %>
+<% use_centered_layout(boxed: false) %>
+
+<div class="fr-grid-row">
+  <div class="fr-col-12 fr-col-md-8">
+
+
+  </div>
+</div>
 
 <div class="fr-container fr-my-6w">
   <div class="fr-grid-row fr-grid-row--gutters">
     <div class="fr-col-12">
-      <h1>Profil utilisateur</h1>
-
       <div class="fr-card fr-card--shadow">
         <div class="fr-card__body">
           <div class="fr-card__content">
-            <h2 class="fr-card__title">
-              <%= @user.given_name %> <%= @user.usual_name %>
-            </h2>
             <div class="fr-card__desc">
               <p><strong>Email :</strong> <%= @user.email %></p>
-              <p><strong>Équipe :</strong> <%= @user.team.organizational_unit if @user.team&.organizational_unit.present? %></p>
+              <p><strong>Équipe
+                :</strong> <%= @user.team.organizational_unit if @user.team&.organizational_unit.present? %></p>
               <p><strong>SIRET :</strong> <%= @user.siret %></p>
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="fr-mt-4w">
-        <%= link_to "Retour", :back, class: "fr-btn fr-btn--secondary" %>
       </div>
     </div>
   </div>
