--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,19 @@
-<% use_centered_layout(boxed: false) %>
-
-<div class="fr-grid-row">
-  <div class="fr-col-12 fr-col-md-8">
-
-
-  </div>
+<% use_centered_layout %>
+<div>
+  <p>
+    <strong><%= Site.human :email %> :</strong>
+    <%= @user.email %>
+  </p>
+  <p>
+    <strong><%= Site.human :team %> :</strong>
+    <%= @user.team.organizational_unit %>
+  </p>
+  <p>
+    <strong><%= Site.human :siret %> :</strong>
+    <%= @user.siret %>
+  </p>
 </div>
 
-<div class="fr-container fr-my-6w">
-  <div class="fr-grid-row fr-grid-row--gutters">
-    <div class="fr-col-12">
-      <div class="fr-card fr-card--shadow">
-        <div class="fr-card__body">
-          <div class="fr-card__content">
-            <div class="fr-card__desc">
-              <p><strong>Email :</strong> <%= @user.email %></p>
-              <p><strong>Équipe
-                :</strong> <%= @user.team.organizational_unit if @user.team&.organizational_unit.present? %></p>
-              <p><strong>SIRET :</strong> <%= @user.siret %></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="fr-btns-group fr-btns-group--inline-md fr-mb-2w">
+  <%= link_to t("shared.back_to_home"), root_path, class: "fr-btn fr-btn--tertiary-no-outline" %>
 </div>
