chore: add cucumber test & fix user's profile layout

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,21 @@
 <% use_centered_layout boxed: false %>
 
-<div class="fr-mt-2w fr-mb-6w">
-  <p>
-    <strong><%= User.human :email %> :</strong>
-    <%= @user.email %>
-  </p>
-  <p>
-    <strong><%= User.human :team %> :</strong>
-    <%= @user.team.organizational_unit %>
-  </p>
-  <p>
-    <strong><%= User.human :siret %> :</strong>
-    <%= @user.siret %>
-  </p>
-</div>
+<%= dsfr_table(caption: User.human(:profile), border: true) do |t| %>
+  <% t.with_head do %>
+    <tr>
+      <th><%= User.human :email %></th>
+      <th><%= User.human :team %></th>
+      <th><%= User.human :siret %></th>
+    </tr>
+  <% end %>
+  <% t.with_body do %>
+    <tr>
+      <td><%= @user.email %></td>
+      <td><%= @user.team.organizational_unit %></td>
+      <td><%= @user.siret %></td>
+    </tr>
+  <% end %>
+<% end %>
 
 <%= page_actions do %>
   <%= link_to t("shared.back_to_home"), root_path, class: "fr-btn fr-btn--tertiary" %>
