--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,3 +1,5 @@
+<%= turbo_stream_from :sites %>
+
 <% form_id = :table_form %>
 <%= form_with(url: sites_path, method: :delete, id: form_id) {} %><%# Form inputs are in every line, associated with the form id %>
 <%= dsfr_table(caption: Site.human(:all), border: true) do |t| %>
@@ -20,35 +22,7 @@
   <% end %>
   <% t.with_body do %>
     <% if @sites.load.any? %>
-      <% @sites.each do |site| %>
-        <tr>
-          <%= dsfr_row_check(site) %>
-          <td class="fr-cell--center"><%= link_icon(:article, Site.human(:view_name, name: site.name), site, title: Site.human(:view_name, name: site.name), line: true, side: :left, sr_only: true) %></td>
-          <td><%= link_to site.url_without_scheme.truncate(35, separator: /\W/), site.url, target: :_blank, title: site.url_without_scheme.length > 35 ? site.url_without_scheme : nil %></td>
-          <% site.audit.all_checks.each do |check| %>
-            <td class="fr-cell--center"><%= badge(to_badge(check), tooltip: check.tooltip?) %></td>
-          <% end %>
-          <td class="fr-cell--multiline">
-            <% tags = site.tags.collect(&:name) %>
-            <% if tags.any? %>
-              <%= safe_join site.tags.take(3).collect(&:name).map { dsfr_tag(title: it.truncate(35), size: :sm) } %>
-              <%= dsfr_tooltip(t("shared.x_more", x: tags.size - 3), type: :link, title: site.tags[3..].collect(&:name).to_sentence) if tags.size > 3 %>
-            <% else %>
-              N/A
-            <% end %>
-          </td>
-          <td>
-            <% if checked_at = site.audit.checked_at %>
-              <% local_time = checked_at.in_time_zone %>
-              <%= time_tag local_time, l(local_time, format: :compact), title: l(local_time, format: :long) %>
-              <br>
-              (<%= time_ago local_time %>)
-            <% else %>
-              <%= Audit.human("audit/status.pending") %>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
+      <%= render partial: "site", collection: @sites %>
     <% else %>
       <tr>
         <td colspan="<%= 5 + Check.classes.size %>">
