--- a/app/views/checks/_run_axe_on_homepage.html.erb
+++ b/app/views/checks/_run_axe_on_homepage.html.erb
@@ -1,6 +1,6 @@
 <div class="fr-mb-5w" id="<%= dom_id check %>">
   <h2 class="fr-h4 fr-mb-1w"><%= check.human_type %></h2>
-  <%= badge check.to_badge %>
+  <%= badge to_badge(check) %>
 
   <% if check.passed? %>
     <ul>
