--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -26,7 +26,7 @@
           <td class="fr-cell--center"><%= link_icon(:article, Site.human(:view_name, name: site.name), site, title: Site.human(:view_name, name: site.name), line: true, side: :left, sr_only: true) %></td>
           <td><%= link_to site.url_without_scheme.truncate(35, separator: /\W/), site.url, target: :_blank, title: site.url_without_scheme.length > 35 ? site.url_without_scheme : nil %></td>
           <% site.audit.all_checks.each do |check| %>
-            <td class="fr-cell--center"><%= badge(check.to_badge, tooltip: check.tooltip?) %></td>
+            <td class="fr-cell--center"><%= badge(to_badge(check), tooltip: check.tooltip?) %></td>
           <% end %>
           <td class="fr-cell--multiline">
             <% tags = site.tags.collect(&:name) %>
