--- a/app/views/sites/_site.html.erb
+++ b/app/views/sites/_site.html.erb
@@ -1,6 +1,6 @@
 <tr id="<%= dom_id(site, :sites_table) %>">
   <%= dsfr_row_check(site) %>
-  <td class="fr-cell--center"><%= link_icon(:article, Site.human(:view_name, name: site.name), site, title: Site.human(:view_name, name: site.name), line: true, side: :left, sr_only: true) %></td>
+  <td class="fr-cell--center"><%= link_icon(:article, Site.human(:view_name, name: site.name_with_fallback), site, title: Site.human(:view_name, name: site.name_with_fallback), line: true, side: :left, sr_only: true) %></td>
   <td><%= link_to site.url_without_scheme.truncate(35, separator: /\W/), site.url, target: :_blank, title: site.url_without_scheme.length > 35 ? site.url_without_scheme : nil %></td>
   <% site.audit.all_checks.each do |check| %>
     <td id="<%= dom_id(check, :sites_table) %>" class="fr-cell--center"><%= badge(to_badge(check), tooltip: check.tooltip?) %></td>
