--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -26,7 +26,7 @@
     <% else %>
       <tr>
         <td colspan="<%= 5 + Check.classes.size %>">
-          <%= Site.human(params.dig(:search, :q)&.empty? ? :no_results : :no_search_results) %>
+          <%= Site.human(params.dig(:search, :q).present? ? :no_search_results : :no_results) %>
         </td>
       </tr>
     <% end %>
