--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,9 @@
 <%= dsfr_header logo_text: t("global.sponsor_html"), title: t("global.service_name"), tagline: t("global.service_description"), html_attributes: { id: :nav } do |header| %>
   <%= header.with_direct_link_simple title: t("pages.accueil.title"), path: root_path, active: current_page?(root_path) %>
 
-  <% if authenticated? %>
+  <%= header.with_tool_link title: t("pages.display_mode.title"), path: display_mode_path, html_attributes: { class: icon_class(:theme), "data-turbo-frame": :modal } %>
 
+  <% if authenticated? %>
     <%= header.with_tool_link title: current_user.name.truncate(30), path: user_path, html_attributes: { class: [icon_class("account-circle", btn: :tertiary)] } %>
     <%= header.with_tool_link title: t("shared.logout"), path: logout_path, html_attributes: { class: [icon_class("logout-box-r", btn: :secondary)], "data-turbo-method": :delete } %>
 
