fix: update audit status translations - Add missing translation for `mixed` status - Update view to render `@audit.status_from_checks`

--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -24,7 +24,7 @@
     <% else %>
       <p>
         <strong><%= Audit.human(:status) %> :</strong>
-        <%= Audit.human("audit/status.pending") %>
+        <%= Audit.human("audit/status.#{@audit.status_from_checks}") %>
       </p>
     <% end %>
     <%= render(partial: @audit.all_checks, as: :check) %>
