--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -14,12 +14,12 @@
         <%= Tag.human_count(count: 0) %>
       <% end %>
     </p>
-    <% if @audit.checked_at %>
+    <% if @audit.completed_at %>
       <p>
-        <strong><%= Audit.human :checked_at %> :</strong>
-        <% checked_at = @audit.checked_at %>
-        <%= time_tag checked_at, l(checked_at, format: :long) %>
-        (<%= time_ago checked_at %>).
+        <strong><%= Audit.human :completed_at %> :</strong>
+        <% completed_at = @audit.completed_at %>
+        <%= time_tag completed_at, l(completed_at, format: :long) %>
+        (<%= time_ago completed_at %>).
       </p>
     <% else %>
       <p>
@@ -30,7 +30,7 @@
     <%= render(partial: @audit.all_checks, as: :check) %>
   </div>
   <div class="fr-col-12 fr-col-md-4">
-    <% audits = @site.audits.checked.sort_by_newest.load %>
+    <% audits = @site.audits.completed.sort_by_newest.load %>
     <%= dsfr_sidemenu(button: Site.human(:audits), title: Site.human(:audit_history, total: audits.count), right: true) do |sidemenu| %>
       <% audits.each do |audit| %>
         <% sidemenu.with_item text: l(audit.created_at.in_time_zone, format: :long).upcase_first, href: url_for([@site, audit]), active: @audit == audit %>
