--- a/app/views/checks/_analyze_accessibility_page.html.erb
+++ b/app/views/checks/_analyze_accessibility_page.html.erb
@@ -1,7 +1,4 @@
-<div class="fr-mb-5w" id="<%= dom_id check %>">
-  <h2 class="fr-h4 fr-mb-1w"><%= check.human_type %></h2>
-  <%= badge to_badge(check) %>
-
+<%= render "checks/check", check: do %>
   <% if check.completed? %>
     <ul>
       <li><strong><%= check.human(:compliance_rate) %></strong> : <%= check.human_compliance_rate || check.human(:unknown) %></li>
@@ -23,4 +20,4 @@
       <li><strong><%= check.human(:auditor) %></strong> : <%= check.auditor || check.human(:unknown) %></li>
     </ul>
   <% end %>
-</div>
+<% end %>
