--- a/app/views/checks/_find_accessibility_page.html.erb
+++ b/app/views/checks/_find_accessibility_page.html.erb
@@ -1,4 +1,1 @@
-<div class="fr-mb-5w" id="<%= dom_id check %>">
-  <h2 class="fr-h4 fr-mb-1w"><%= check.human_type %></h2>
-  <%= badge to_badge(check) %>
-</div>
+<%= render "checks/check", check: %>
