--- a/app/views/checks/_run_axe_on_homepage.html.erb
+++ b/app/views/checks/_run_axe_on_homepage.html.erb
@@ -1,7 +1,4 @@
-<div class="fr-mb-5w" id="<%= dom_id check %>">
-  <h2 class="fr-h4 fr-mb-1w"><%= check.human_type %></h2>
-  <%= badge to_badge(check) %>
-
+<%= render "checks/check", check: do %>
   <% if check.completed? %>
     <ul>
       <li><strong><%= check.human(:checks_total) %></strong> : <%= number_to_human(check.checks_total) || check.human(:unknown) %></li>
@@ -28,4 +25,4 @@
       <% end %>
     <% end %>
   <% end %>
-</div>
+<% end %>
