--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -132,6 +132,18 @@ form.button_to {
   }
 }
 
+.fr-btn {
+  &.with-icon-and-text {
+    max-width: unset !important; // DSFR inexplicably hides the text for buttons with icons
+  }
+  // Allow full-width buttons
+  &.d-block {
+    display: flex;
+    width: 100%;
+  }
+}
+
+
 // Style indeterminate checkboxes
 .fr-checkbox-group input[type="checkbox"]:indeterminate + label::before {
   background-color: var(--border-action-high-blue-france) !important;
