--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -143,6 +143,9 @@ form.button_to {
   }
 }
 
+.text-wrap {
+  white-space: normal;
+}
 
 // Style indeterminate checkboxes
 .fr-checkbox-group input[type="checkbox"]:indeterminate + label::before {
